bug 283036: Append a <body> tag to the context of HTML context stacks to make sure that all context is flushed out of the DTD before we process the new content. r+sr=bzbarsky